...
        android:orientation="vertical"
        tools:context=".activity.AddServiceDetailsActivity">

        <include layout="@layout/common_toolbar" />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
...
                                android:text="Services"
                                android:textColor="@color/text_color1"
                                android:textSize="@dimen/fourteen_sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/ivAddServices"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_weight="0"
                                android:padding="@dimen/three_dp"
                                android:src="@mipmap/ic_add_icon" />

...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/serviceRecycView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/ten_dp"
                                android:layout_marginEnd="@dimen/ten_dp" />

                            <LinearLayout
...
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:orientation="horizontal">


                                                <ImageView
                                                    android:id="@+id/ivTyre1"
                                                    android:layout_width="55dp"
                                                    android:layout_height="55dp"
                                                    android:layout_marginTop="@dimen/five_dp"
                                                    android:src="@drawable/ic_completed_tyre_config" />


...
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:orientation="horizontal">


                                                <ImageView
                                                    android:id="@+id/ivTyre2"
                                                    android:layout_width="55dp"
                                                    android:layout_height="55dp"
                                                    android:layout_marginTop="@dimen/five_dp"
                                                    android:src="@drawable/ic_completed_tyre_config" />
                                            </LinearLayout>

...
                                                android:layout_gravity="center"
                                                android:gravity="center"
                                                android:orientation="horizontal">


                                                <ImageView
                                                    android:id="@+id/ivTyre3"
                                                    android:layout_width="55dp"
                                                    android:layout_height="55dp"
                                                    android:layout_gravity="center"
                                                    android:layout_marginTop="@dimen/five_dp"
                                                    android:src="@drawable/ic_completed_tyre_config" />

...
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:orientation="horizontal">


                                                <ImageView
                                                    android:id="@+id/ivTyre4"
                                                    android:layout_width="55dp"
                                                    android:layout_height="55dp"
                                                    android:layout_marginTop="@dimen/five_dp"
                                                    android:src="@drawable/ic_completed_tyre_config" />


...
