package com.walkins.aapkedoorstep

import android.content.Context
import android.content.SharedPreferences
import android.view.View
import android.widget.CheckBox
import android.widget.HorizontalScrollView
import android.widget.ScrollView
import android.widget.TextView
import androidx.annotation.IdRes
import androidx.core.widget.NestedScrollView
import androidx.recyclerview.widget.RecyclerView
import androidx.test.espresso.*
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.NoMatchingViewException
import androidx.test.espresso.action.ScrollToAction
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.espresso.util.TreeIterables
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.platform.app.InstrumentationRegistry
import androidx.test.rule.ActivityTestRule
import com.ramotion.fluidslider.FluidSlider
import com.walkins.aapkedoorstep.activity.LoginActivity
import com.walkins.aapkedoorstep.services.MultipleServiceMultipleTyreSelection
import org.hamcrest.CoreMatchers
import org.hamcrest.CoreMatchers.anyOf
import org.hamcrest.Matcher
import org.junit.Assert
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith


@RunWith(AndroidJUnit4::class)
class TestCasesForAllServiceMultipleTyre {

    private val PREFERENCE_NAME = "MyPref"
    private var preferencesEditor: SharedPreferences.Editor? = null
    private var preferences: SharedPreferences? = null

    //    private var serviceSelection: SingleServiceTyreSelection? = null
    private var serviceSelection: MultipleServiceMultipleTyreSelection? = null

    @Before
    fun setSharedPref() {
        val targetContext: Context = InstrumentationRegistry.getInstrumentation().targetContext

        preferences = targetContext.getSharedPreferences(PREFERENCE_NAME, Context.MODE_PRIVATE);
//        serviceSelection = SingleServiceTyreSelection()
        serviceSelection = MultipleServiceMultipleTyreSelection()

        print("login_" + "" + preferences?.getBoolean("isLogin", false))


    }

    @get:Rule
    open val mActivityRule: ActivityTestRule<LoginActivity> = ActivityTestRule(
        LoginActivity::class.java
    )

    @Test
    fun loginFunctionality() {
        print("login_" + "" + preferences?.getBoolean("isLogin", false))
//        Assert.assertEquals("login_" + true+"-", "login_" + preferences?.getBoolean("isLogin", false))

        loginView()
    }

    private fun loginView() {

        onView(withId(R.id.btnLoginToDashBoard)).perform(customScrollTo, click())
        onView(withId(R.id.edtLoginEmail)).perform(typeText(serviceSelection?.invalidNumber))
        onView(withId(R.id.btnLoginToDashBoard)).perform(
            closeSoftKeyboard(),
            click()
        )

        BaseRobot().doOnView(withId(R.id.btnOk), closeSoftKeyboard(), click())

        onView(withId(R.id.edtLoginEmail)).perform(
            clearText(),
            typeText(serviceSelection?.validNumber)
        )

        onView(withId(R.id.btnLoginToDashBoard)).perform(
            closeSoftKeyboard(),
            click()
        )

        verifyOTP()
    }

    private fun verifyOTP() {

//        click when no OTP entered
        BaseRobot().doOnView(withId(R.id.btnVerify), closeSoftKeyboard(), click())

        enterInvalidOTP()

        onView(withId(R.id.btnVerify)).perform(
            closeSoftKeyboard(),
            click()
        )

        BaseRobot().doOnView(withId(R.id.btnOk), closeSoftKeyboard(), click())

        enterValidOTP()

        onView(withId(R.id.btnVerify)).perform(
            closeSoftKeyboard(),
            click()
        )
        NavigateMainDashboard()
    }

    private fun enterValidOTP() {
        onView(withId(R.id.edtOtp1)).perform(
            clearText(),
            typeText("1"),

            )
        onView(withId(R.id.edtOtp2)).perform(
            clearText(),
            typeText("2"),

            )
        onView(withId(R.id.edtOtp3)).perform(
            clearText(),
            typeText("1"),

            )
        onView(withId(R.id.edtOtp4)).perform(
            clearText(),
            typeText("2"), closeSoftKeyboard(),

            )

        Thread.sleep(1000)
    }

    private fun enterInvalidOTP() {

        onView(withId(R.id.edtOtp1)).perform(typeText("1"), customScrollTo, click())
        onView(withId(R.id.edtOtp2)).perform(
            typeText("5"),
            click()
        )
        onView(withId(R.id.edtOtp3)).perform(
            typeText("1"),
            click()
        )
        onView(withId(R.id.edtOtp4)).perform(
            typeText("5"), closeSoftKeyboard(),
            click()
        )

        onView(withId(R.id.scrollVerify)).perform(
            closeSoftKeyboard(),
            swipeUp()
        )

    }

    private fun NavigateMainDashboard() {

        BaseRobot().doOnView(withId(R.id.llhome), closeSoftKeyboard(), click())

        Thread.sleep(4000)
        BaseRobot().doOnView(
            withId(R.id.recyclerView), closeSoftKeyboard(),
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        navigateToServiceListScreen()
    }

    private fun navigateToServiceListScreen() {

        BaseRobot().doOnView(
            withId(R.id.serviceRecycView), closeSoftKeyboard(),
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        navigateToAddServiceDetailScreen()
    }

    private fun navigateToAddServiceDetailScreen() {

//        skipServiceFlow()
        Thread.sleep(2500)
        onView(withId(R.id.ivAddServices)).perform(customScrollTo, click())

        if (!serviceSelection?.nitrogen_refill_service.equals("")) {
            try {
                BaseRobot().doOnView(
                    withId(R.id.serviceRecycView), closeSoftKeyboard(),
                    RecyclerViewActions.actionOnItem<RecyclerView.ViewHolder>(
                        hasDescendant(withText(serviceSelection?.nitrogen_refill_service)),
                        recyclerChildAction<CheckBox>(R.id.chkNitrogenTopup) {
                            if (!this.isChecked) {
                                this.performClick()
                                click()
                            }
                        }

                    )
                )
            } catch (e: java.lang.Exception) {
                e.printStackTrace()
            }
        }
        if (!serviceSelection?.wheel_balancing_service.equals("")) {
            try {
                BaseRobot().doOnView(
                    withId(R.id.serviceRecycView), closeSoftKeyboard(),
                    RecyclerViewActions.actionOnItem<RecyclerView.ViewHolder>(
                        hasDescendant(withText(serviceSelection?.wheel_balancing_service)),
                        recyclerChildAction<CheckBox>(R.id.chkNitrogenTopup) {
                            if (!this.isChecked) {
                                this.performClick()
                                click()
                            }
                        }
                    )
                )
            } catch (e: java.lang.Exception) {
                e.printStackTrace()
            }
        }

        BaseRobot().doOnView(
            withId(R.id.scroll), closeSoftKeyboard(),
            swipeUp()
        )

        if (!serviceSelection?.nitrogen_topup_service.equals("")) {
            try {
                BaseRobot().doOnView(
                    withId(R.id.serviceRecycView), closeSoftKeyboard(),
                    RecyclerViewActions.actionOnItem<RecyclerView.ViewHolder>(
                        hasDescendant(withText(serviceSelection?.nitrogen_topup_service)),
                        recyclerChildAction<CheckBox>(R.id.chkNitrogenTopup) {
                            if (!this.isChecked) {
                                this.performClick()
                                click()
                            }
                        }
                    )
                )
            } catch (e: java.lang.Exception) {
                e.printStackTrace()
            }
        }
        if (!serviceSelection?.typeRotation_service.equals("")) {
            try {
                BaseRobot().doOnView(
                    withId(R.id.serviceRecycView), closeSoftKeyboard(),
                    RecyclerViewActions.actionOnItem<RecyclerView.ViewHolder>(
                        hasDescendant(withText(serviceSelection?.typeRotation_service)),
                        recyclerChildAction<CheckBox>(R.id.chkNitrogenTopup) {
                            if (!this.isChecked) {
                                this.performClick()
                                click()
                            }
                        }
                    )
                )

            } catch (e: java.lang.Exception) {
                e.printStackTrace()
            }

            try {
                onView(withId(R.id.radioLF_LR)).perform(customScrollTo, click())
            } catch (e: java.lang.Exception) {
                e.printStackTrace()
            }
        }

        fillUpAddServicedetail()

//        if (serviceSelection?.vehicleWiseStoreData!!) {
//            serviceSelection?.vehicleWiseStoreData = false
//            AnotherVehicleDetailFillup()
//        }
    }

    private fun AnotherVehicleDetailFillup() {
        BaseRobot().doOnView(withId(R.id.ivBack), closeSoftKeyboard(), click())

        BaseRobot().doOnView(
            withId(R.id.serviceRecycView), closeSoftKeyboard(),
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                1,
                click()
            )
        )
        navigateToAddServiceDetailScreen()
    }

    private fun editFlowPerform() {

        tyreLFTyreSelection()
        tyreRFTyreSelection()
        tyreLRTyreSelection()
        tyreRRTyreSelection()
    }

    private fun removeWheelBalancingService() {
//        Remove service Flow
        if (!serviceSelection?.wheel_balancing_service.equals("")) {
            try {
                BaseRobot().doOnView(
                    withId(R.id.serviceRecycView), closeSoftKeyboard(),
                    RecyclerViewActions.actionOnItem<RecyclerView.ViewHolder>(
                        hasDescendant(withText(serviceSelection?.wheel_balancing_service)),
                        click()
                    )
                )
            } catch (e: java.lang.Exception) {
                e.printStackTrace()
            }
        }

        BaseRobot().doOnView(withId(R.id.btn_cancel), closeSoftKeyboard(), click())

        try {
            BaseRobot().doOnView(
                withId(R.id.serviceRecycView), closeSoftKeyboard(),
                RecyclerViewActions.actionOnItem<RecyclerView.ViewHolder>(
                    hasDescendant(withText(serviceSelection?.wheel_balancing_service)),
                    click()
                )
            )
        } catch (e: java.lang.Exception) {
            e.printStackTrace()
        }

//        remove ok
        BaseRobot().doOnView(withId(R.id.btn_ok), closeSoftKeyboard(), click())

    }

    private fun tyreRRTyreSelection() {
        BaseRobot().doOnView(withId(R.id.ivTyre4), closeSoftKeyboard(), click())
        navigateToVehicleBrandScreeneSelection(4, "RR")
    }

    private fun tyreLRTyreSelection() {
        BaseRobot().doOnView(withId(R.id.ivTyre2), closeSoftKeyboard(), click())
        navigateToVehicleBrandScreeneSelection(3, "LR")
    }

    private fun tyreRFTyreSelection() {
        BaseRobot().doOnView(withId(R.id.ivTyre3), closeSoftKeyboard(), click())
        navigateToVehicleBrandScreeneSelection(2, "RF")
    }

    private fun tyreLFTyreSelection() {
        onView(withId(R.id.ivTyre1)).perform(customScrollTo, click())
        navigateToVehicleBrandScreeneSelection(0, "LF")
    }

    private fun skipServiceFlow() {
        BaseRobot().doOnView(withId(R.id.tvSkipService), closeSoftKeyboard(), click())
        BaseRobot().doOnView(withId(R.id.btnConfirm), closeSoftKeyboard(), click())
//        pendingReasonRecycView
        BaseRobot().doOnView(
            withId(R.id.pendingReasonRecycView), closeSoftKeyboard(),
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                2,
                click()
            )
        )

        BaseRobot().doOnView(withId(R.id.ivClose), closeSoftKeyboard(), click())
//        BaseRobot().doOnView(withId(R.id.btnConfirm), ViewActions.closeSoftKeyboard(), ViewActions.click())
    }

    private fun navigateToVehicleBrandScreeneSelection(number: Int, type: String) {

        Thread.sleep(1000)
        val title = onView(withId(R.id.tvTitle))
        if (getText(title).equals("Select Tyre Make - " + type)) {
            try {
                BaseRobot().doOnView(
                    withId(R.id.gridviewRecycMake_), closeSoftKeyboard(),
                    RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                        number,
                        click()
                    )
                )
                onView(withId(R.id.gridviewRecycMake_))
                    .perform(
                        RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                            number,
                            recyclerChildAction<TextView>(R.id.tvmakeName) {
                                print("vehicle_make-->" + this.text?.toString())
                                if (type.equals("LF")) {
                                    serviceSelection?.vehicleMake_lf = this.text.toString()
                                } else if (type.equals("RF")) {
                                    serviceSelection?.vehicleMake_rf = this.text.toString()
                                } else if (type.equals("LR")) {
                                    serviceSelection?.vehicleMake_lr = this.text.toString()
                                } else if (type.equals("RR")) {
                                    serviceSelection?.vehicleMake_rr = this.text.toString()
                                }

//                            selects?.selected_vehicleMake = this.text.toString()
                            }
                        )
                    )
                if (!serviceSelection?.singleTyreSelection!!) {
                    BaseRobot().doOnView(withId(R.id.chkRF), closeSoftKeyboard(), click())
                    BaseRobot().doOnView(withId(R.id.chkLR), closeSoftKeyboard(), click())
                    BaseRobot().doOnView(withId(R.id.chkRR), closeSoftKeyboard(), click())
                }
            } catch (e: Exception) {
                e.printStackTrace()
                try {
                    BaseRobot().doOnView(withId(R.id.ivEditVehicleMake), closeSoftKeyboard(), click())

                    Thread.sleep(150)
                    BaseRobot().doOnView(
                        withId(R.id.gridviewRecycMake_), closeSoftKeyboard(),
                        RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                            2,
                            click()
                        )
                    )
                    onView(withId(R.id.gridviewRecycMake_))
                        .perform(
                            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                                2,
                                recyclerChildAction<TextView>(R.id.tvmakeName) {
                                    print("vehicle_make-->" + this.text?.toString())
                                    if (type.equals("LF")) {
                                        serviceSelection?.vehicleMake_lf = this.text.toString()
                                    } else if (type.equals("RF")) {
                                        serviceSelection?.vehicleMake_rf = this.text.toString()
                                    } else if (type.equals("LR")) {
                                        serviceSelection?.vehicleMake_lr = this.text.toString()
                                    } else if (type.equals("RR")) {
                                        serviceSelection?.vehicleMake_rr = this.text.toString()
                                    }

//                            selects?.selected_vehicleMake = this.text.toString()
                                }
                            )
                        )
                } catch (e: java.lang.Exception) {
                    e.printStackTrace()
                }
            }

            try {
                BaseRobot().doOnView(withId(R.id.btnNext), closeSoftKeyboard(), click())
            } catch (e: java.lang.Exception) {
                e.printStackTrace()
            }
            navigateToVehiclePatternScreen(type)
        } else {
            navigateToVehiclePatternScreen(type)
        }

    }

    private fun navigateToVehiclePatternScreen(type: String) {
        Thread.sleep(1000)
        val title = onView(withId(R.id.tvTitle))

        if (getText(title).equals("Select Tyre Pattern - " + type)) {
            try {
                val number = (0..4).random()
                BaseRobot().doOnView(
                    withId(R.id.gridviewRecycModel), closeSoftKeyboard(),
                    RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                        number,
                        click()
                    )
                )
                onView(withId(R.id.gridviewRecycModel))
                    .perform(
                        RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                            number,
                            recyclerChildAction<TextView>(R.id.ivVehicleImage) {
                                print("vehicle_make-->" + this.text?.toString())
                                if (type.equals("LF")) {
                                    serviceSelection?.vehiclePattern_lf = this.text.toString()
                                } else if (type.equals("LR")) {
                                    serviceSelection?.vehiclePattern_lr = this.text.toString()
                                } else if (type.equals("RF")) {
                                    serviceSelection?.vehiclePattern_rf = this.text.toString()
                                } else if (type.equals("RR")) {
                                    serviceSelection?.vehiclePattern_rr = this.text.toString()
                                }

//                            selects?.selected_vehicleMake = this.text.toString()
                            }
                        )
                    )
                if (!serviceSelection?.singleTyreSelection!!) {
                    BaseRobot().doOnView(withId(R.id.chkRF), closeSoftKeyboard(), click())
                    BaseRobot().doOnView(withId(R.id.chkLR), closeSoftKeyboard(), click())
                    BaseRobot().doOnView(withId(R.id.chkRR), closeSoftKeyboard(), click())
                }
            } catch (e: Exception) {
                e.printStackTrace()

                try {
                    BaseRobot().doOnView(withId(R.id.ivEditVehicleMakeModel), closeSoftKeyboard(), click())
                    Thread.sleep(150)
                    BaseRobot().doOnView(
                        withId(R.id.gridviewRecycModel), closeSoftKeyboard(),
                        RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                            1,
                            click()
                        )
                    )
                    onView(withId(R.id.gridviewRecycModel))
                        .perform(
                            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                                1,
                                recyclerChildAction<TextView>(R.id.ivVehicleImage) {
                                    print("vehicle_make-->" + this.text?.toString())
                                    if (type.equals("LF")) {
                                        serviceSelection?.vehiclePattern_lf = this.text.toString()
                                    } else if (type.equals("LR")) {
                                        serviceSelection?.vehiclePattern_lr = this.text.toString()
                                    } else if (type.equals("RF")) {
                                        serviceSelection?.vehiclePattern_rf = this.text.toString()
                                    } else if (type.equals("RR")) {
                                        serviceSelection?.vehiclePattern_rr = this.text.toString()
                                    }

//                            selects?.selected_vehicleMake = this.text.toString()
                                }
                            )
                        )
                } catch (e: Exception) {
                    e.printStackTrace()
                }
            }

            try {
                BaseRobot().doOnView(withId(R.id.btnNext), closeSoftKeyboard(), click())
            } catch (e: java.lang.Exception) {
                e.printStackTrace()
            }

            navigateToVehicleSizeScreen(type)
        } else {
            navigateToVehicleSizeScreen(type)
        }

    }

    private fun navigateToVehicleSizeScreen(type: String) {
        Thread.sleep(1000)
        val title = onView(withId(R.id.tvTitle))
        if (getText(title).equals("Select Tyre Size - " + type)) {
            try {
//            onView(withId(R.id.gridviewRecycModel)).isDisplayed()
                BaseRobot().doOnView(
                    withId(R.id.gridviewRecycModel), closeSoftKeyboard(),
                    RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                        0,
                        click()
                    )
                )
                onView(withId(R.id.gridviewRecycModel))
                    .perform(
                        RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                            0,
                            recyclerChildAction<TextView>(R.id.ivVehicleImage) {
                                print("vehicle_make-->" + this.text?.toString())
                                if (type.equals("LF")) {
                                    serviceSelection?.vehiclePattern_lf = this.text.toString()
                                } else if (type.equals("LR")) {
                                    serviceSelection?.vehiclePattern_lr = this.text.toString()
                                } else if (type.equals("RF")) {
                                    serviceSelection?.vehiclePattern_rf = this.text.toString()
                                } else if (type.equals("RR")) {
                                    serviceSelection?.vehiclePattern_rr = this.text.toString()
                                }
//                            selects?.selected_vehicleMake = this.text.toString()
                            }
                        )
                    )
                if (!serviceSelection?.singleTyreSelection!!) {
                    BaseRobot().doOnView(withId(R.id.chkRF), closeSoftKeyboard(), click())
                    BaseRobot().doOnView(withId(R.id.chkLR), closeSoftKeyboard(), click())
                    BaseRobot().doOnView(withId(R.id.chkRR), closeSoftKeyboard(), click())
                }
                //view is displayed logic
            } catch (e: java.lang.Exception) {
                e.printStackTrace()
